<resources>
    <string name="app_name">GeoQuiz</string>

    <string name="question_text">Beijing is the capital of China.</string>
    <string name="question_china">Beijing is the capital of China.</string>
    <string name="question_oceans">The pacific Ocean is larger than Atlantic Ocean.</string>
    <string name="question_usa">Richmond is the capital city of Virginia.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button">Next</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgment_toast">Cheating is wrong.</string>

</resources>
